feat: :sparkles: implementation module session and func authenticate user
