# src/modules/session/useCases/authenticateUser/AuthenticateUserController.ts
@@ -1,0 +1,19 @@
+import { Request, Response } from "express";
+import { container } from "tsyringe";
+
+import { AuthenticateUserUseCase } from "./AuthenticateUserUseCase";
+
+
+class AuthenticateUserController {
+  async handle(request: Request, response: Response): Promise<Response> {
+    const { email, password } = request.body;
+
+    const authenticateUserUseCase = container.resolve(AuthenticateUserUseCase);
+
+    const authenticate = await authenticateUserUseCase.execute(email, password);
+
+    return response.json(authenticate);
+  }
+}
+
+export { AuthenticateUserController }
