# src/shared/infra/http/routes/index.ts
@@ -1,9 +1,11 @@
 import { Router } from "express";
 
+import { sessionRoutes } from "./session.routes";
 import { usersRoutes } from "./users.routes";
 
 const router = Router();
 
+router.use("/session", sessionRoutes);
 router.use("/users", usersRoutes);
 
 export { router }
